# perceptX

./: .gitignore  README.md  pyproject.toml
perceptx/: __init__.py  detect.py  pipeline.py  segment.py  track.py
perceptx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: run.py
