[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perceptx"
version = "0.1.0"
description = "Multi-object detection, segmentation and tracking for ADAS"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.2.0",
    "supervision>=0.21.0",
    "opencv-python>=4.9.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.26.0",
"segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
]
